feat: 댓글 스니펫 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,3 +131,12 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<!-- Utterances 댓글 스니핏 삽입 -->
+<script src="https://utteranc.es/client.js"
+        repo="pwnsec-tech/pwnsec-tech.github.io"
+        issue-term="pathname"
+        theme="github-dark-orange"
+        crossorigin="anonymous"
+        async>
+</script>
