--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -876,7 +876,7 @@ $btn-mb: 0.5rem;
       margin-bottom: $btn-mb;
     }
   } /* .sidebar-bottom */
-  background: url('/assets/img/sidebar/image.jpeg');
+  background: url('/assets/img/sidebar/sidebar_img.jpg');
   background-size: 100% 100%;
   background-position: center;
 } /* #sidebar */
