--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1379,13 +1379,13 @@ $btn-mb: 0.5rem;
   footer {
     p {
       width: auto;
-      &:last-child {
-        &::before {
-          content: '-';
-          margin: 0 0.75rem;
-          opacity: 0.8;
-        }
-      }
+      // &:last-child {
+      //   &::before {
+      //     content: '-';
+      //     margin: 0 0.75rem;
+      //     opacity: 0.8;
+      //   }
+      // }
     }
   }
 
